# reordering-cli

./: CMakeLists.txt  README.md  get_graph.cpp  get_graph.h  main.cpp  reorderingHyperedges.hpp  reorderingVerticesHyperedges.cpp  reorderingVerticesHyperedges.hpp
compress/: compressUnordering.cpp  compressUnordering.hpp  reorderingHyperedges.cpp  reorderingVertices.cpp  reorderingVertices.hpp  reorderingVerticesHyperedges.cpp
read/: NQAdjList.cpp  NQAdjList.hpp  NQOneDimArray.cpp  NQOneDimArray.hpp  query.cpp  query.hpp
